<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise"
    android:background="@drawable/profile_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/linear_layout"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/ex_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ex_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingStart="10dp"/>

    </LinearLayout>

    <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent=".75"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/arm_btn"
                    android:text="@string/arm_btn"
                    android:textSize="24sp"
                    android:textColor="@color/teal_200"
                    android:background="@drawable/arm_exercise"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/leg_btn"
                    android:layout_marginTop="10dp"
                    android:text="@string/leg_btn"
                    android:textSize="24sp"
                    android:textColor="@color/teal_200"
                    android:background="@drawable/leg_exercise"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/abs_btn"
                    android:layout_marginTop="10dp"
                    android:text="@string/abs_btn"
                    android:textSize="24sp"
                    android:textColor="@color/teal_200"
                    android:background="@drawable/abs_exercise"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butt_btn"
                    android:layout_width="match_parent"
                    android:layout_height="153dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/butt_exercise"
                    android:text="@string/butt_btn"
                    android:textColor="@color/teal_200"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/chest_btn"
                    android:text="@string/chest_btn"
                    android:textSize="24sp"
                    android:textColor="@color/teal_200"
                    android:background="@drawable/all_exercise"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent=".13"
            app:layout_constraintTop_toBottomOf="@id/scroll_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exercise_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_exercise_foreground"
                android:contentDescription="Exercises"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/meal_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_meal_foreground"
                android:contentDescription="Meal"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_profile_foreground"
                android:contentDescription="Profile"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>