<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/home_img"
        android:layout_width="414dp"
        android:layout_height="734dp"
        android:contentDescription="@string/home_img"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/home_img" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:backgroundTint="#6B6B6B"
        android:text="@string/start_btn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slogan"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="200dp"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="@+id/home_img"
        app:layout_constraintStart_toStartOf="@+id/home_img"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintVertical_bias="0.966" />
    
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/slogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="HOMEFIT"
        android:textSize="50sp"
        android:textColor="@color/background"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="150dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>